# lorekeeper

./: .gitignore  Cargo.toml  README.md  architecture.md  brainstorm_memory_bank.md  context.md  justfile  rustfmt.toml  spec.md
.agent/rules/: algo-rules.md  architecture-rules.md  audit-rules.md  builder-rules.md  coding-standard.md  design-rules.md  doc-rules.md  feature-rules.md  ipr.md  issue-rules.md  phase-rules.md  spec-rules.md
.agent/scripts/: Audit-Codebase.ps1  Check-Environment.ps1  Check-Logs.ps1  Git-Checkpoint.ps1  Load-Context.ps1  Scan-ProjectDocs.ps1  Sync-TaskList.ps1
.agent/workflows/: ago.md  architecture.md  audit.md  brainstorm.md  build.md  design.md  feature.md  issue.md  log-audit-generic.md  plan-making.md  spec.md  toolcheck.md  update-doc.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs  main.rs  render.rs
src/db/: mod.rs  schema.rs
src/model/: entry.rs  mod.rs  types.rs  validation.rs
src/server/: help.rs  mod.rs
src/store/: mod.rs  repository.rs  sqlite.rs
