[package]
name = "lorekeeper"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
uuid = { version = "1.15.0", features = ["v7", "serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4.39", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
rust-mcp-sdk = { version = "0.8.3", features = ["server"] }
async-trait = "0.1"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.17.1"

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
clone_on_ref_ptr = "warn"
str_to_string = "warn"
